gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-profiler-runtime.rs
#![profiler_runtime] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

